Some minor fixes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p data-i18n="about.history">Клуб сформировался в 2019 году на базе спортивного движения Moto Rally Cup, а в декабре 2022 года получил официальный статус MCC.</p>
                     <p data-i18n="about.founder">Founder (основатель) — Алексей Кузьмич (KUZMICH) - профессиональный гонщик, МСМК (Мастер спорта международного класса), девятикратный участник ралли-марафона «DAKAR».</p>
                     <p data-i18n="about.members">Действующие спортсмены и ветераны ралли, ралли-рейдов, единоборств и других спорт дисциплин; мото-путешественники и энтузиасты подготовки техники; команда, где ценятся опыт, взаимовыручка и честный спорт.</p>
-                    <p data-i18n="about.mission">MARSIANS MCC создан для тех, кто видит в мотоцикле не просто средство передвижения, а символ свободы, силы и движения вперёд. Мы строим Клуб будущего: спортивное, открытое и международное сообщество, объединяющее сильных и целеустремлённых райдеров.</p>
+                    <p data-i18n="about.mission">MARSIANS MCC создан для тех, кто видит в мотоцикле не просто средство передвижения, а символ свободы, силы и движения вперед. Мы строим Клуб будущего: спортивное, открытое и международное сообщество, объединяющее сильных и целеустремлённых райдеров.</p>
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
