Add google analytics

--- a/events.html
+++ b/events.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VY75K21KX2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VY75K21KX2');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="MARSIANS MCC - Мероприятия и события клуба">
+    <meta name="description" content="Мероприятия MARSIANS MCC - гонки, ралли-рейды, встречи, поездки и события международного мотоклуба спортсменов">
+    <meta name="keywords" content="мероприятия, события, ралли, гонки, мотоклуб, MARSIANS MCC, Dakar, эндуро">
+    <meta name="author" content="MARSIANS MCC">
     <meta name="theme-color" content="#000000">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://marsians-mcc.com/events.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://marsians-mcc.com/events.html">
+    <meta property="og:title" content="Мероприятия - MARSIANS MCC">
+    <meta property="og:description" content="Гонки, ралли-рейды, встречи, поездки и события международного мотоклуба спортсменов MARSIANS MCC">
+    <meta property="og:image" content="https://marsians-mcc.com/images/marsians-logo.jpg">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:site_name" content="MARSIANS MCC">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://marsians-mcc.com/events.html">
+    <meta name="twitter:title" content="Мероприятия - MARSIANS MCC">
+    <meta name="twitter:description" content="Гонки, ралли-рейды, встречи, поездки и события международного мотоклуба спортсменов MARSIANS MCC">
+    <meta name="twitter:image" content="https://marsians-mcc.com/images/marsians-logo.jpg">
+
     <title>Мероприятия - MARSIANS MCC</title>
 
     <!-- Favicons -->
@@ -32,9 +65,9 @@
                     <li><a href="index.html#philosophy" data-i18n="nav.philosophy">Философия</a></li>
                     <li><a href="index.html#members" data-i18n="nav.members">Лица клуба</a></li>
                     <li><a href="events.html" data-i18n="nav.events">Мероприятия</a></li>
-                    <li><a href="memorial.html" data-i18n="nav.memorial">Мемориал</a></li>
                     <li><a href="index.html#geography" data-i18n="nav.geography">География</a></li>
                     <li><a href="index.html#membership" data-i18n="nav.membership">Членство</a></li>
+                    <li><a href="memorial.html" data-i18n="nav.memorial">Мемориал</a></li>
                     <li><a href="index.html#contact" data-i18n="nav.contact">Контакты</a></li>
                 </ul>
                 <div class="lang-switcher">
