--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VY75K21KX2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VY75K21KX2');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="MARSIANS MCC - Мотоклуб спортсменов. Объединяем райдеров из ралли, рейдов, мотокросса и других дисциплин.">
+    <meta name="keywords" content="мотоклуб, MCC, ралли, Dakar, мотоцикл, спортсмены, эндуро, мотокросс, международный клуб">
+    <meta name="author" content="MARSIANS MCC">
     <meta name="theme-color" content="#000000">
-    <title>MARSIANS MCC - Мотоклуб</title>
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://marsians-mcc.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://marsians-mcc.com/">
+    <meta property="og:title" content="MARSIANS MCC - Международный мотоклуб спортсменов">
+    <meta property="og:description" content="Международный мотоциклетный клуб, объединяющий спортсменов ралли-рейдов, эндуро, мотокросса, трофи и мото-путешественников. EST. 2019 | MCC STATUS 2022">
+    <meta property="og:image" content="https://marsians-mcc.com/images/marsians-logo.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:site_name" content="MARSIANS MCC">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://marsians-mcc.com/">
+    <meta name="twitter:title" content="MARSIANS MCC - Международный мотоклуб спортсменов">
+    <meta name="twitter:description" content="Международный мотоциклетный клуб, объединяющий спортсменов ралли-рейдов, эндуро, мотокросса, трофи и мото-путешественников. EST. 2019 | MCC STATUS 2022">
+    <meta name="twitter:image" content="https://marsians-mcc.com/images/marsians-logo.jpg">
+
+    <!-- Alternate Languages -->
+    <link rel="alternate" hreflang="ru" href="https://marsians-mcc.com/">
+    <link rel="alternate" hreflang="en" href="https://marsians-mcc.com/">
+    <link rel="alternate" hreflang="x-default" href="https://marsians-mcc.com/">
+
+    <title>MARSIANS MCC - Международный мотоклуб спортсменов</title>
 
     <!-- Favicons -->
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
@@ -34,9 +74,9 @@
                     <li><a href="index.html#philosophy" data-i18n="nav.philosophy">Философия</a></li>
                     <li><a href="index.html#members" data-i18n="nav.members">Лица клуба</a></li>
                     <li><a href="events.html" data-i18n="nav.events">Мероприятия</a></li>
-                    <li><a href="memorial.html" data-i18n="nav.memorial">Мемориал</a></li>
                     <li><a href="index.html#geography" data-i18n="nav.geography">География</a></li>
                     <li><a href="index.html#membership" data-i18n="nav.membership">Членство</a></li>
+                    <li><a href="memorial.html" data-i18n="nav.memorial">Мемориал</a></li>
                     <li><a href="index.html#contact" data-i18n="nav.contact">Контакты</a></li>
                 </ul>
                 <div class="lang-switcher">
@@ -241,7 +281,7 @@
             <div class="membership-content">
                 <div class="membership-info">
 <!--                    <h3 data-i18n="membership.hierarchy">Иерархия членства</h3>-->
-                    <p data-i18n="membership.info1">ленами клуба могут стать мужчины-спортсмены любого направления и на мотоциклах любых типов.</p>
+                    <p data-i18n="membership.info1">Членами клуба могут стать мужчины-спортсмены любого направления и на мотоциклах любых типов.</p>
                     <p data-i18n="membership.info2">В статусах Support и Hangaround кандидат может не иметь мотоцикла.</p>
                     <p data-i18n="membership.info3">Женщины могут участвовать в жизни клуба только в статусе SUPPORT.</p>
                 </div>
@@ -337,6 +377,102 @@
         document.addEventListener('DOMContentLoaded', () => {
             window.i18n.init();
         });
+    </script>
+
+    <!-- Structured Data - Organization -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "MARSIANS MCC",
+        "alternateName": "MARSIANS Motorcycle Club",
+        "url": "https://marsians-mcc.com",
+        "logo": "https://marsians-mcc.com/images/marsians-logo.jpg",
+        "description": "Международный мотоциклетный клуб, объединяющий спортсменов ралли-рейдов, эндуро, мотокросса, трофи, кольцевых гонок и мото-путешественников",
+        "foundingDate": "2019-07-19",
+        "email": "motorallycup@yandex.ru",
+        "areaServed": [
+            {
+                "@type": "Country",
+                "name": "Russia"
+            },
+            {
+                "@type": "Country",
+                "name": "Germany"
+            },
+            {
+                "@type": "Country",
+                "name": "Portugal"
+            },
+            {
+                "@type": "Country",
+                "name": "Israel"
+            },
+            {
+                "@type": "Country",
+                "name": "Saudi Arabia"
+            },
+            {
+                "@type": "Country",
+                "name": "UAE"
+            },
+            {
+                "@type": "Country",
+                "name": "Ecuador"
+            },
+            {
+                "@type": "Country",
+                "name": "Algeria"
+            },
+            {
+                "@type": "Country",
+                "name": "Armenia"
+            },
+            {
+                "@type": "Country",
+                "name": "Bosnia and Herzegovina"
+            }
+        ],
+        "sameAs": [
+            "http://vk.com/marsians_mcc",
+            "https://instagram.com/marsians.mcc"
+        ],
+        "founder": {
+            "@type": "Person",
+            "name": "Алексей Кузьмич",
+            "alternateName": "KUZMICH",
+            "description": "Профессиональный гонщик, МСМК (Мастер спорта международного класса), девятикратный участник ралли-марафона Dakar"
+        }
+    }
+    </script>
+
+    <!-- Structured Data - WebSite -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "MARSIANS MCC",
+        "url": "https://marsians-mcc.com",
+        "description": "Официальный сайт международного мотоклуба MARSIANS MCC",
+        "inLanguage": ["ru", "en"]
+    }
+    </script>
+
+    <!-- Structured Data - SportsOrganization -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "SportsOrganization",
+        "name": "MARSIANS MCC",
+        "sport": "Motorcycle Racing",
+        "url": "https://marsians-mcc.com",
+        "logo": "https://marsians-mcc.com/images/marsians-logo.jpg",
+        "foundingDate": "2019-07-19",
+        "memberOf": {
+            "@type": "Organization",
+            "name": "International Motorcycle Clubs"
+        }
+    }
     </script>
 </body>
 </html>
