Some minor fixes

--- a/memorial.html
+++ b/memorial.html
@@ -122,6 +122,7 @@
     </footer>
 
     <script src="js/i18n.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/memorial.js"></script>
     <script>
         // Initialize i18n when page loads
