Add whatsapp contacts

--- a/events.html
+++ b/events.html
@@ -26,7 +26,7 @@
     <meta property="og:url" content="https://marsians-mcc.com/events.html">
     <meta property="og:title" content="Мероприятия - MARSIANS MCC">
     <meta property="og:description" content="Гонки, ралли-рейды, встречи, поездки и события международного мотоклуба спортсменов MARSIANS MCC">
-    <meta property="og:image" content="https://marsians-mcc.com/images/marsians-logo.jpg">
+    <meta property="og:image" content="https://marsians-mcc.com/images/marsians-logo-new.jpg">
     <meta property="og:locale" content="ru_RU">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="og:site_name" content="MARSIANS MCC">
@@ -36,7 +36,7 @@
     <meta name="twitter:url" content="https://marsians-mcc.com/events.html">
     <meta name="twitter:title" content="Мероприятия - MARSIANS MCC">
     <meta name="twitter:description" content="Гонки, ралли-рейды, встречи, поездки и события международного мотоклуба спортсменов MARSIANS MCC">
-    <meta name="twitter:image" content="https://marsians-mcc.com/images/marsians-logo.jpg">
+    <meta name="twitter:image" content="https://marsians-mcc.com/images/marsians-logo-new.jpg">
 
     <title>Мероприятия - MARSIANS MCC</title>
 
@@ -110,7 +110,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="images/marsians-logo.jpg" alt="MARSIANS MCC">
+                    <img src="images/marsians-logo-new.jpg" alt="MARSIANS MCC - MARSIANS NATION">
                 </div>
                 <div class="footer-info">
                     <p data-i18n="footer.subtitle">Мотоклуб спортсменов</p>
