--- a/memorial.html
+++ b/memorial.html
@@ -26,7 +26,7 @@
     <meta property="og:url" content="https://marsians-mcc.com/memorial.html">
     <meta property="og:title" content="Мемориал - MARSIANS MCC">
     <meta property="og:description" content="В память о павших братьях. Мы помним тех, кто разделял с нами дорогу, ценности и братство">
-    <meta property="og:image" content="https://marsians-mcc.com/images/marsians-logo.jpg">
+    <meta property="og:image" content="https://marsians-mcc.com/images/marsians-logo-new.jpg">
     <meta property="og:locale" content="ru_RU">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="og:site_name" content="MARSIANS MCC">
@@ -36,7 +36,7 @@
     <meta name="twitter:url" content="https://marsians-mcc.com/memorial.html">
     <meta name="twitter:title" content="Мемориал - MARSIANS MCC">
     <meta name="twitter:description" content="В память о павших братьях. Мы помним тех, кто разделял с нами дорогу, ценности и братство">
-    <meta name="twitter:image" content="https://marsians-mcc.com/images/marsians-logo.jpg">
+    <meta name="twitter:image" content="https://marsians-mcc.com/images/marsians-logo-new.jpg">
 
     <title>Мемориал - MARSIANS MCC</title>
 
@@ -108,7 +108,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="images/marsians-logo.jpg" alt="MARSIANS MCC">
+                    <img src="images/marsians-logo-new.jpg" alt="MARSIANS MCC - MARSIANS NATION">
                 </div>
                 <div class="footer-info">
                     <p data-i18n="footer.subtitle">Мотоклуб спортсменов</p>
