--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:url" content="https://marsians-mcc.com/">
     <meta property="og:title" content="MARSIANS MCC - Международный мотоклуб спортсменов">
     <meta property="og:description" content="Международный мотоциклетный клуб, объединяющий спортсменов ралли-рейдов, эндуро, мотокросса, трофи и мото-путешественников. EST. 2019 | MCC STATUS 2022">
-    <meta property="og:image" content="https://marsians-mcc.com/images/marsians-logo.jpg">
+    <meta property="og:image" content="https://marsians-mcc.com/images/marsians-logo-new.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="ru_RU">
@@ -38,7 +38,7 @@
     <meta name="twitter:url" content="https://marsians-mcc.com/">
     <meta name="twitter:title" content="MARSIANS MCC - Международный мотоклуб спортсменов">
     <meta name="twitter:description" content="Международный мотоциклетный клуб, объединяющий спортсменов ралли-рейдов, эндуро, мотокросса, трофи и мото-путешественников. EST. 2019 | MCC STATUS 2022">
-    <meta name="twitter:image" content="https://marsians-mcc.com/images/marsians-logo.jpg">
+    <meta name="twitter:image" content="https://marsians-mcc.com/images/marsians-logo-new.jpg">
 
     <!-- Alternate Languages -->
     <link rel="alternate" hreflang="ru" href="https://marsians-mcc.com/">
@@ -325,14 +325,19 @@
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M21 10C21 17 12 23 12 23C12 23 3 17 3 10C3 7.61305 3.94821 5.32387 5.63604 3.63604C7.32387 1.94821 9.61305 1 12 1C14.3869 1 16.6761 1.94821 18.364 3.63604C20.0518 5.32387 21 7.61305 21 10Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M12 13C13.6569 13 15 11.6569 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 11.6569 10.3431 13 12 13Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
                         </svg>
                     </div>
                     <div class="contact-details">
                         <h4 data-i18n="contact.whatsapp">WhatsApp</h4>
                         <p data-i18n="contact.first5">Контакты FIRST5 руководства</p>
+                        <div class="whatsapp-contacts">
+                            <p><a href="https://wa.me/79266333030">+7 926 633 3030</a> — Kuzmich</p>
+                            <p><a href="https://wa.me/79671764647">+7 967 176 4647</a> — Gregor</p>
+                            <p><a href="https://wa.me/79265803450">+7 926 580 3450</a> — Dyakon</p>
+                            <p><a href="https://wa.me/79153703983">+7 915 370 3983</a> — Koba4ok</p>
+                        </div>
                     </div>
                 </div>
                 <div class="contact-socials">
@@ -361,7 +366,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="images/marsians-logo.jpg" alt="MARSIANS MCC">
+                    <img src="images/marsians-logo-new.jpg" alt="MARSIANS MCC - MARSIANS NATION">
                 </div>
                 <div class="footer-info">
                     <p data-i18n="footer.subtitle">Мотоклуб спортсменов</p>
@@ -392,7 +397,7 @@
         "name": "MARSIANS MCC",
         "alternateName": "MARSIANS Motorcycle Club",
         "url": "https://marsians-mcc.com",
-        "logo": "https://marsians-mcc.com/images/marsians-logo.jpg",
+        "logo": "https://marsians-mcc.com/images/marsians-logo-new.jpg",
         "description": "Международный мотоциклетный клуб, объединяющий спортсменов ралли-рейдов, эндуро, мотокросса, трофи, кольцевых гонок и мото-путешественников",
         "foundingDate": "2019-07-19",
         "email": "motorallycup@yandex.ru",
@@ -472,7 +477,7 @@
         "name": "MARSIANS MCC",
         "sport": "Motorcycle Racing",
         "url": "https://marsians-mcc.com",
-        "logo": "https://marsians-mcc.com/images/marsians-logo.jpg",
+        "logo": "https://marsians-mcc.com/images/marsians-logo-new.jpg",
         "foundingDate": "2019-07-19",
         "memberOf": {
             "@type": "Organization",
