Change loge to curved

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <link rel="manifest" href="site.webmanifest">
 
     <link rel="stylesheet" href="css/nasalization.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1767554278">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
@@ -96,11 +96,32 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-overlay"></div>
-        <div class="container">
+        <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title" data-i18n="hero.title">MARSIANS MCC</h1>
-                <p class="hero-subtitle" data-i18n="hero.subtitle">Мотоклуб спортсменов</p>
-                <div class="hero-date" data-i18n="hero.date">EST. 19.07.2019 | MCC STATUS 08.12.2022</div>
+                <svg class="hero-curved-text hero-top" viewBox="0 0 2500 13" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" style="z-index: 10; position: relative; width: 100%; height: auto; overflow: visible;">
+                    <defs>
+                        <path id="arcTopV16" d="M 850,12 A 120,120 0 0,1 1650,12"/>
+                    </defs>
+                    <text fill="#ffffff" font-family="Nasalization, Arial, sans-serif" font-size="120" font-weight="900" letter-spacing="18">
+                        <textPath href="#arcTopV16" startOffset="50%" text-anchor="middle">
+                            MARSIANS
+                        </textPath>
+                    </text>
+                </svg>
+                <div class="hero-center">
+                    <p class="hero-subtitle" data-i18n="hero.subtitle">Мотоклуб спортсменов</p>
+                    <div class="hero-date" data-i18n="hero.date">EST. 19.07.2019 | MCC STATUS 08.12.2022</div>
+                </div>
+                <svg class="hero-curved-text hero-bottom" viewBox="0 0 2500 13" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" style="z-index: 10; position: relative; width: 100%; height: auto; overflow: visible;">
+                    <defs>
+                        <path id="arcBotV16" d="M 850,1 A 120,120 0 0,0 1650,1"/>
+                    </defs>
+                    <text fill="#ffffff" font-family="Nasalization, Arial, sans-serif" font-size="120" font-weight="900" letter-spacing="18">
+                        <textPath href="#arcBotV16" startOffset="50%" text-anchor="middle">
+                            NATION
+                        </textPath>
+                    </text>
+                </svg>
             </div>
         </div>
         <div class="scroll-indicator">
@@ -333,7 +354,7 @@
                         <h4 data-i18n="contact.whatsapp">WhatsApp</h4>
                         <p data-i18n="contact.first5">Контакты FIRST5 руководства</p>
                         <div class="whatsapp-contacts">
-                            <p><a href="https://wa.me/79266333030">+7 926 633 3030</a> — Kuzmich</p>
+                            <p><a href="https://wa.me/971558033576">+971 55 803 3576</a> — Kuzmich</p>
                             <p><a href="https://wa.me/79671764647">+7 967 176 4647</a> — Gregor</p>
                             <p><a href="https://wa.me/79265803450">+7 926 580 3450</a> — Dyakon</p>
                             <p><a href="https://wa.me/79153703983">+7 915 370 3983</a> — Koba4ok</p>
