Change loge to curved

--- a/memorial.html
+++ b/memorial.html
@@ -47,7 +47,7 @@
     <link rel="manifest" href="site.webmanifest">
 
     <link rel="stylesheet" href="css/nasalization.css">
-    <link rel="stylesheet" href="css/style.css?v=1767556413">
+    <link rel="stylesheet" href="css/style.css?v=1767596304">
 </head>
 <body>
     <!-- Header -->
@@ -113,6 +113,23 @@
                 <div class="footer-info">
                     <p data-i18n="footer.subtitle">Мотоклуб спортсменов</p>
                     <p>EST. 2019 | MCC STATUS 2022</p>
+                </div>
+                <div class="footer-socials">
+                    <a href="http://vk.com/marsians_mcc" class="social-link" aria-label="VKontakte">
+                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12.785 16.241s.288-.032.436-.193c.136-.148.131-.425.131-.425s-.019-1.297.582-1.488c.593-.188 1.354 1.254 2.161 1.808.612.42 1.078.328 1.078.328l2.167-.03s1.133-.07.596-.962c-.044-.073-.314-.661-1.613-1.87-1.36-1.266-1.178-1.061.46-3.254.999-1.338 1.398-2.154 1.274-2.503-.118-.333-.849-.245-.849-.245l-2.439.015s-.181-.025-.315.056c-.131.079-.216.263-.216.263s-.387 1.03-.903 1.906c-1.087 1.848-1.523 1.947-1.7 1.832-.412-.267-.309-1.073-.309-1.645 0-1.788.271-2.533-.528-2.726-.266-.064-.461-.106-1.14-.113-.87-.009-1.605.003-2.021.207-.277.136-.491.439-.361.456.161.022.525.098.718.361.249.339.24 1.102.24 1.102s.143 2.105-.334 2.366c-.328.179-.777-.187-1.742-1.862-.494-.854-.867-1.798-.867-1.798s-.072-.176-.2-.271c-.155-.114-.372-.15-.372-.15l-2.318.015s-.348.01-.476.161c-.114.134-.009.411-.009.411s1.816 4.25 3.873 6.395c1.885 1.968 4.025 1.839 4.025 1.839h.971z"/>
+                        </svg>
+                    </a>
+                    <a href="https://instagram.com/marsians.mcc" class="social-link" aria-label="Instagram">
+                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                        </svg>
+                    </a>
+                    <a href="https://www.facebook.com/61574670457330/" class="social-link" aria-label="Facebook">
+                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                        </svg>
+                    </a>
                 </div>
             </div>
             <div class="footer-bottom">
