--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <link rel="manifest" href="site.webmanifest">
 
     <link rel="stylesheet" href="css/nasalization.css">
-    <link rel="stylesheet" href="css/style.css?v=1767556413">
+    <link rel="stylesheet" href="css/style.css?v=1767596304">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
@@ -361,7 +361,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact-socials">
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <img src="images/marsians-logo-new.jpg" alt="MARSIANS MCC - MARSIANS NATION">
+                </div>
+                <div class="footer-info">
+                    <p data-i18n="footer.subtitle">Мотоклуб спортсменов</p>
+                    <p>EST. 2019 | MCC STATUS 2022</p>
+                </div>
+                <div class="footer-socials">
                     <a href="http://vk.com/marsians_mcc" class="social-link" aria-label="VKontakte">
                         <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path d="M12.785 16.241s.288-.032.436-.193c.136-.148.131-.425.131-.425s-.019-1.297.582-1.488c.593-.188 1.354 1.254 2.161 1.808.612.42 1.078.328 1.078.328l2.167-.03s1.133-.07.596-.962c-.044-.073-.314-.661-1.613-1.87-1.36-1.266-1.178-1.061.46-3.254.999-1.338 1.398-2.154 1.274-2.503-.118-.333-.849-.245-.849-.245l-2.439.015s-.181-.025-.315.056c-.131.079-.216.263-.216.263s-.387 1.03-.903 1.906c-1.087 1.848-1.523 1.947-1.7 1.832-.412-.267-.309-1.073-.309-1.645 0-1.788.271-2.533-.528-2.726-.266-.064-.461-.106-1.14-.113-.87-.009-1.605.003-2.021.207-.277.136-.491.439-.361.456.161.022.525.098.718.361.249.339.24 1.102.24 1.102s.143 2.105-.334 2.366c-.328.179-.777-.187-1.742-1.862-.494-.854-.867-1.798-.867-1.798s-.072-.176-.2-.271c-.155-.114-.372-.15-.372-.15l-2.318.015s-.348.01-.476.161c-.114.134-.009.411-.009.411s1.816 4.25 3.873 6.395c1.885 1.968 4.025 1.839 4.025 1.839h.971z"/>
@@ -377,21 +392,6 @@
                             <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
                         </svg>
                     </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="images/marsians-logo-new.jpg" alt="MARSIANS MCC - MARSIANS NATION">
-                </div>
-                <div class="footer-info">
-                    <p data-i18n="footer.subtitle">Мотоклуб спортсменов</p>
-                    <p>EST. 2019 | MCC STATUS 2022</p>
                 </div>
             </div>
             <div class="footer-bottom">
