Add New Location - Poland

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <div class="stat-label" data-i18n="about.stats.mcc">Статус MCC</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">10+</div>
+                        <div class="stat-number">11</div>
                         <div class="stat-label" data-i18n="about.stats.countries">Стран</div>
                     </div>
                 </div>
@@ -260,22 +260,23 @@
                     <span class="country-item" data-i18n="geography.countries.russia">🇷🇺 Россия</span>
                     <span class="country-item" data-i18n="geography.countries.germany">🇩🇪 Германия</span>
                     <span class="country-item" data-i18n="geography.countries.portugal">🇵🇹 Португалия</span>
+                    <span class="country-item" data-i18n="geography.countries.poland">🇵🇱 Польша</span>
                     <span class="country-item" data-i18n="geography.countries.israel">🇮🇱 Израиль</span>
                     <span class="country-item" data-i18n="geography.countries.saudi">🇸🇦 Саудовская Аравия</span>
                     <span class="country-item" data-i18n="geography.countries.uae">🇦🇪 ОАЭ</span>
                     <span class="country-item" data-i18n="geography.countries.ecuador">🇪🇨 Эквадор</span>
                     <span class="country-item" data-i18n="geography.countries.algeria">🇩🇿 Алжир</span>
-                    <span class="country-item" data-i18n="geography.countries.armenia">🇦🇲 Армения</span>
+                    <span class="country-item" data-i18n="geography.countries.armenia">🇦🇼 Армения</span>
                     <span class="country-item" data-i18n="geography.countries.bosnia">🇧🇦 Босния и Герцеговина</span>
                 </div>
                 <div id="map" class="google-map"></div>
                 <div class="geography-stats">
                     <div class="stat-block">
-                        <div class="stat-value">28</div>
+                        <div class="stat-value">29</div>
                         <div class="stat-desc" data-i18n="geography.stats.cities">Городов</div>
                     </div>
                     <div class="stat-block">
-                        <div class="stat-value">10</div>
+                        <div class="stat-value">11</div>
                         <div class="stat-desc" data-i18n="geography.stats.countries">Стран</div>
                     </div>
                     <div class="stat-block">
@@ -434,6 +435,10 @@
             {
                 "@type": "Country",
                 "name": "Portugal"
+            },
+            {
+                "@type": "Country",
+                "name": "Poland"
             },
             {
                 "@type": "Country",
